--- a/Dmitri_Antonov_ex2.ipynb
+++ b/Dmitri_Antonov_ex2.ipynb
@@ -3,6 +3,17 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Student 1: name:Dmitri_Antonov , i.d.:317270510 , github:https://github.com/dimantonov\n",
+        "Student 2: name:Nisim_Noam_sharabi , i.d.:201606514 , github:https://github.com/nisimsh44-cloud"
+      ],
+      "metadata": {
+        "id": "bXSBM-gK5moC"
+      },
+      "id": "bXSBM-gK5moC"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Libraries (don't change)"
       ],
       "metadata": {
@@ -12,7 +23,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "5f1ba5ec",
       "metadata": {
         "id": "5f1ba5ec",
@@ -171,7 +182,7 @@
         "outputId": "ef76c263-3f17-434c-e1e4-c0035abbdb09"
       },
       "id": "XJIYaWIggSCp",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -195,7 +206,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "2cb0bf0c",
       "metadata": {
         "id": "2cb0bf0c"
@@ -253,12 +264,11 @@
     {
       "cell_type": "code",
       "source": [
-        "import torch.nn as nn\n",
         "\n",
         "@dataclass\n",
         "class LayerSpec:\n",
         "    out_dim: int\n",
-        "    activation: Type[nn.Module] = nn.ReLU # Changed from F.relu to nn.ReLU\n",
+        "    activation: Callable[[torch.Tensor], torch.Tensor] = F.relu\n",
         "    dropout: float = 0.0\n",
         "    batch_norm: bool = True\n",
         "    weight_decay: float = 0.0\n",
@@ -277,13 +287,13 @@
         "    patience: int = 15\n",
         "    min_delta: float = 1e-4\n",
         "    val_fraction: float = 0.1\n",
-        "    seed: int = 42"
+        "    seed: int = 42\n"
       ],
       "metadata": {
         "id": "FwDGf9J66bXL"
       },
       "id": "FwDGf9J66bXL",
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -298,7 +308,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "b5843387",
       "metadata": {
         "id": "b5843387"
@@ -379,7 +389,7 @@
         "id": "KgImYRwI5hAr"
       },
       "id": "KgImYRwI5hAr",
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -394,7 +404,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "e474713f",
       "metadata": {
         "id": "e474713f"
@@ -539,7 +549,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "d133bb1a",
       "metadata": {
         "id": "d133bb1a",
@@ -2197,7 +2207,7 @@
         "                        out_dim=neurons,\n",
         "                        dropout=dropout,\n",
         "                        batch_norm=True,\n",
-        "                        activation=nn.ReLU  # חשוב: בלי סוגריים כאן, ה-Model יוסיף אותם\n",
+        "                        activation=nn.ReLU\n",
         "                    )\n",
         "                ]\n",
         "            )\n",
@@ -2249,7 +2259,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "740b2e48",
       "metadata": {
         "id": "740b2e48",
@@ -2339,7 +2349,7 @@
         "outputId": "c35c1336-2b18-483c-a1d5-4111a0c5971a"
       },
       "id": "A-FR-NYgt6Hv",
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
